--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -9,7 +9,10 @@
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   height: 4rem;
+}
+.link {
+  margin-left: 3.5rem;
 }
