--- a/src/Components/Event/Events.module.css
+++ b/src/Components/Event/Events.module.css
@@ -3,6 +3,31 @@
   flex-wrap: wrap;
 }
 
+.cardSelect {
+  width: 100%;
+}
+
+.select {
+  margin: 0.5rem 2rem;
+  min-width: 5rem;
+  text-align: start;
+
+  font-size: 1rem;
+  font-family: var(--type-first);
+  cursor: pointer;
+  border: none;
+  border-radius: 0.4rem;
+  background: #f0f0f0;
+  min-width: 8rem;
+  padding: 0.8rem 1.2rem;
+  box-sizing: border-box;
+  transition: 0.1s;
+}
+
+.option {
+  text-align: start;
+}
+
 .card {
   display: flex;
   background-color: #ebebeb;
