--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -7,20 +7,35 @@
   display: flex;
   border-radius: 0.5rem;
   width: 14rem;
-  height: 18rem;
-  margin-bottom: 1rem;
+  height: 20rem;
   margin: 0.75rem 1rem;
-  align-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .background {
-  background-color: #ebebeb;
+  background-color: #f0f0f0;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+}
+
+.title {
+}
+
+.address {
+  /* margin: 0 1rem;
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem; */
+  max-width: 80%;
+  text-align: center;
+  font-size: 0.8rem;
+  margin-bottom: 4rem;
+}
+
+.button {
+  margin-top: 1rem;
 }
