--- a/src/Components/Forms/Button.module.css
+++ b/src/Components/Forms/Button.module.css
@@ -1,6 +1,7 @@
 .button {
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-family: var(--type-first);
+  max-width: 8rem;
   cursor: pointer;
   border: none;
   border-radius: 0.4rem;
