--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -6,7 +6,7 @@
 .card {
   display: flex;
   border-radius: 0.5rem;
-  width: 14rem;
+  width: 18rem;
   height: 20rem;
   margin: 0.75rem 1rem;
   align-items: center;
@@ -23,17 +23,14 @@
   align-items: center;
 }
 
-.title {
+.address {
+  text-align: center;
+  font-size: 1rem;
+  margin-bottom: 4rem;
 }
 
-.address {
-  /* margin: 0 1rem;
-  margin-left: 1.5rem;
-  margin-bottom: 1.5rem; */
-  max-width: 80%;
-  text-align: center;
-  font-size: 0.8rem;
-  margin-bottom: 4rem;
+.link {
+  margin-right: 0.5rem;
 }
 
 .button {
