--- a/src/Components/Event/Events.module.css
+++ b/src/Components/Event/Events.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-wrap: wrap;
 }
+.navigation {
+  display: flex;
+  width: 100%;
+}
 
 .cardSelect {
   width: 100%;
@@ -26,6 +30,10 @@
 
 .option {
   text-align: start;
+}
+
+.filter {
+  margin-right: 4rem;
 }
 
 .card {
